feat: rewrote some of the text as they needed to be single-quoted within the trans block. Its fixed now. Major effort

--- a/template/app_admin/admin_base.html
+++ b/template/app_admin/admin_base.html
@@ -47,7 +47,7 @@
 								})
 							}else{
 								if(silence == false){
-									layer.msg("当前已是最新版本！")
+									layer.msg("{% trans '当前已是最新版本！' %}")
 								}
 							}
 						}      
