--- a/template/app_doc/manage/manage_doc_history.html
+++ b/template/app_doc/manage/manage_doc_history.html
@@ -92,7 +92,7 @@
         delDocHis = function(history_id){
         layer.open({
             type:1,
-            title:{%trans '删除历史记录'%},
+            title:'{%trans "删除历史记录"%}',
             area:'300px;',
             id:'delPro',//配置ID
             content:'<div style="margin-left:10px;">{%trans "警告：操作将删除此文档历史版本记录！"%}</div>',
