--- a/template/app_doc/manage/manage_project_collaborator.html
+++ b/template/app_doc/manage/manage_project_collaborator.html
@@ -138,7 +138,7 @@
         addProjectColla = function(pid){
             layer.open({
                 type:1,
-                title:{%trans '添加文集协作者'%},
+                title:"{%trans '添加文集协作者'%}",
                 area:['400px','400px'],
                 id:'addProColla',//配置ID
                 content:$('#add-pro-colla-layer'),
@@ -173,7 +173,7 @@
         delProColla = function(user){
             layer.open({
                 type:1,
-                title:{%trans '删除文集协作者'%},
+                title:"{%trans '删除文集协作者'%}",
                 area:'300px;',
                 id:'delProColla',//配置ID
                 content:'<div style="margin:10px;">{%trans "确定将用户"%}' + user+ '{%trans "从文集协作者中删除？"%}</div>',
@@ -202,7 +202,7 @@
         modifyProjectColla = function(user){
             layer.open({
                 type:1,
-                title:{%trans '修改'%}+ user + {%trans '的协作权限'%},
+                title:"{%trans '修改'%}+ user + {%trans '的协作权限'%}",
                 area:'400px;',
                 id:'modifyProColla',//配置ID
                 content:$('#modify-pro-colla-layer'),
@@ -235,7 +235,7 @@
         delDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:{%trans '删除文档'%},
+                title:"{%trans '删除文档'%}",
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档！"%}</div>',
@@ -274,8 +274,8 @@
         </select>
         <div class="layui-form-item">
           <!-- <div class="layui-input-inline"> -->
-            <input type="radio" name="add-role" value="0" title={%trans "初级权限 - 可新建文档，修改、删除自己创建的文档"%} checked>
-            <input type="radio" name="add-role" value="1" title={%trans "高级权限 - 可操作所有文档"%} >
+            <input type="radio" name="add-role" value="0" title='{%trans "初级权限 - 可新建文档，修改、删除自己创建的文档"%}' checked>
+            <input type="radio" name="add-role" value="1" title='{%trans "高级权限 - 可操作所有文档"%}' >
           <!-- </div> -->
         </div>
     </div>
@@ -285,8 +285,8 @@
     <div style="margin:10px;" class="layui-form">
         <div class="layui-form-item">
           <!-- <div class="layui-input-inline"> -->
-            <input type="radio" name="modify-role" value="0" title={%trans "初级权限 - 可新建文档，修改、删除自己创建的文档"%} checked>
-            <input type="radio" name="modify-role" value="1" title={%trans "高级权限 - 可操作所有文档"%} >
+            <input type="radio" name="modify-role" value="0" title='{%trans "初级权限 - 可新建文档，修改、删除自己创建的文档"%}' checked>
+            <input type="radio" name="modify-role" value="1" title='{%trans "高级权限 - 可操作所有文档"%}' >
           <!-- </div> -->
         </div>
     </div>
