--- a/template/app_admin/admin_project.html
+++ b/template/app_admin/admin_project.html
@@ -33,11 +33,11 @@
         {{d.name}}
         {{#if (d.role == 0) { }}
         {{# }else if(d.role == 1){ }}
-        <span  tooltip={%trans "私密" %} placement="right"><i class="layui-icon layui-icon-password"></i></span>
+        <span  tooltip='{%trans "私密" %}' placement="right"><i class="layui-icon layui-icon-password"></i></span>
         {{# }else if(d.role == 2){ }}
-        <span  tooltip={%trans "指定用户" %} placement="right"><i class="layui-icon layui-icon-user"></i></span>
+        <span  tooltip='{%trans "指定用户" %}' placement="right"><i class="layui-icon layui-icon-user"></i></span>
         {{# }else if(d.role == 3){ }}
-        <span  tooltip={%trans "访问码" %} placement="right"><i class="layui-icon layui-icon-key"></i></span>
+        <span  tooltip='{%trans "访问码" %}' placement="right"><i class="layui-icon layui-icon-key"></i></span>
         {{# } }}
     </a>
     {% endverbatim %}
@@ -70,7 +70,7 @@
 <!-- 协作人数 -->
 <script type="text/html" id="colla-cnt">
     {% verbatim %}
-    <span>{{d.colla_total}}</span> <a href="/manage_project_colla/{{d.id}}/"  title={%trans "管理文集协作" %}><i class="layui-icon layui-icon-set"></i></a>
+    <span>{{d.colla_total}}</span> <a href="/manage_project_colla/{{d.id}}/"  title='{%trans "管理文集协作" %}'><i class="layui-icon layui-icon-set"></i></a>
     {% endverbatim %}
 </script>
 
@@ -84,7 +84,7 @@
 <!-- 文集置顶 -->
 <script type="text/html" id="is-top">
     {% verbatim %}
-    <input type="checkbox" name="is_top" value="{{d.id}}" lay-skin="switch" lay-text={%trans "是|否" %} lay-filter="topActive" {{ d.is_top === true ? 'checked' : '' }}>
+    <input type="checkbox" name="is_top" value="{{d.id}}" lay-skin="switch" lay-text='{%trans "是|否" %}' lay-filter="topActive" {{ d.is_top === true ? 'checked' : '' }}>
     {% endverbatim %}
 </script>
 
@@ -102,15 +102,15 @@
         let cols = [
             [
                 {type: 'checkbox',width:20},
-                {title: {%trans '文集名称' %},field: 'name',align: 'left',templet:"#project-name",minWidth:200},
+                {title: "{%trans '文集名称' %}",field: 'name',align: 'left',templet:"#project-name",minWidth:200},
                 // {title: '简介',field: 'intro',align: 'left',templet:"#share-type"},
                 // {title: '权限',field: 'role',align: 'left',templet:"#project-role"},
-                {title: {%trans '文档数' %},field: 'doc_total',align: 'left',width:90},
-                {title: {%trans '协作人数' %},field: 'colla_total',align: 'left',templet:"#colla-cnt",width:90},
-                {title: {%trans '作者' %},field: 'create_user',align: 'left',width:90},
-                {title: {%trans '置顶' %},field: 'is_top',align: 'left',width:90,templet:"#is-top"},
-                {title: {%trans '创建时间' %},field: 'create_time',align: 'left',templet:"#project-create-time"},
-                {title: {%trans '操作' %},toolbar: '#project-bar',align: 'left',}
+                {title: "{%trans '文档数' %}",field: 'doc_total',align: 'left',width:90},
+                {title: "{%trans '协作人数' %}",field: 'colla_total',align: 'left',templet:"#colla-cnt",width:90},
+                {title: "{%trans '作者' %}",field: 'create_user',align: 'left',width:90},
+                {title: "{%trans '置顶' %}",field: 'is_top',align: 'left',width:90,templet:"#is-top"},
+                {title: "{%trans '创建时间' %}",field: 'create_time',align: 'left',templet:"#project-create-time"},
+                {title: "{%trans '操作' %}",toolbar: '#project-bar',align: 'left',}
             ]
         ]
         // 渲染表格
@@ -141,7 +141,7 @@
             }else if(obj.event === 'batchRemove'){ // 批量删除文集
                 batchRemove(obj)
             }else if(obj.event === 'search'){ // 搜索文集
-                console.log('搜索文集')
+                console.log("{%trans '搜索文集' %}")
                 table.reload('project-table',{
                     where:{
                     'type':1,'kw':$('input[name="project-search-kw"]').val()
@@ -162,7 +162,7 @@
                 success: function(r) {
                     layer.close(loading);
                     if (r.status) {
-                        layer.msg('修改成功', {
+                        layer.msg('{% trans "修改成功" %}', {
                             icon: 1,
                             time: 1000
                         },function(){
@@ -177,7 +177,7 @@
                 },
                 error:function(){
                     layer.close(loading);
-                    layer.msg("置顶失败")
+                    layer.msg("{% trans '置顶失败' %}")
                 }
             })
         });
@@ -186,10 +186,10 @@
         createProject = function(){
             layer.open({
                 type:1,
-                title:{%trans '新建文集' %},
+                title:"{%trans '新建文集' %}",
                 area:'300px;',
                 id:'createPro',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder={%trans "输入文集名" %} required  lay-verify="required"><textarea name="desc" id="desc" placeholder={%trans "输入文集简介" %} class="layui-textarea"></textarea></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder="{%trans "输入文集名" %}" required  lay-verify="required"><textarea name="desc" id="desc" placeholder="{%trans "输入文集简介" %}" class="layui-textarea"></textarea></div>',
                 btn:['{%trans "确定" %}','{%trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -217,10 +217,10 @@
         modifyProject = function(pro_id,pro_name,pro_intro){
             layer.open({
                 type:1,
-                title:{%trans '修改文集' %},
+                title:"{%trans '修改文集' %}",
                 area:'300px;',
                 id:'modifyPro',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder={%trans "输入文集名" %} required  lay-verify="required" value="'+pro_name+'"><textarea name="desc" id="desc" placeholder={%trans "输入文集简介"%} class="layui-textarea">'+pro_intro+'</textarea></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder="{%trans "输入文集名" %}" required  lay-verify="required" value="'+pro_name+'"><textarea name="desc" id="desc" placeholder="{%trans "输入文集简介"%}" class="layui-textarea">'+pro_intro+'</textarea></div>',
                 btn:['{%trans "确定" %}','{%trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -278,7 +278,7 @@
                             }
                         })
                     }else{
-                        layer.msg("输入错误！")
+                        layer.msg("{% trans '输入错误！' %}")
                     }
                 },
             });
@@ -304,7 +304,7 @@
                 title:'{% trans "删除文集" %}',
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin-left:10px;">{%trans "你正在批量删除文集！"%}<br><br>{% trans "警告！此操作将" %}<span style="font-weight:700;color:red;">{%trans "删除所选文集及文集下所有文档！" %}</span>{% trans "并且" %}<span style="font-weight:700;color:red;">不可恢复！</span><br><br>{% trans "请输入" %}“DELETE”{% trans "以再次确认删除。"%}<br><input class="layui-input" style="width:95%;" id="confirm_batch_delete_project" placeholder="DELETE"></div>',
+                content:'<div style="margin-left:10px;">{%trans "你正在批量删除文集！"%}<br><br>{% trans "警告！此操作将" %}<span style="font-weight:700;color:red;">{%trans "删除所选文集及文集下所有文档！" %}</span>{% trans "并且" %}<span style="font-weight:700;color:red;">{% trans "不可恢复！" %}</span><br><br>{% trans "请输入" %}“DELETE”{% trans "以再次确认删除。"%}<br><input class="layui-input" style="width:95%;" id="confirm_batch_delete_project" placeholder="DELETE"></div>',
                 btn:['{% trans "批量删除" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -334,7 +334,7 @@
                             }
                         })
                     }else{
-                        layer.msg("输入错误！")
+                        layer.msg("{% trans '输入错误！' %}")
                     }
                 }
             });
