--- a/template/app_admin/admin_project_role.html
+++ b/template/app_admin/admin_project_role.html
@@ -45,17 +45,17 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "权限选择" %}</label>
                     <div class="layui-input-block">
-                        <input type="radio" name="role" value="0" title={%trans "公开" %} {% if pro.role == 0 %} checked {%endif%} lay-filter="role">
-                        <input type="radio" name="role" value="1" title={%trans "私密" %} {% if pro.role == 1 %} checked {%endif%} lay-filter="role">
-                        <input type="radio" name="role" value="2" title={%trans "指定用户可见" %} {% if pro.role == 2 %} checked {%endif%} lay-filter="role">
-                        <input type="radio" name="role" value="3" title={%trans "访问码可见" %} {% if pro.role == 3 %} checked {%endif%} lay-filter="role">
+                        <input type="radio" name="role" value="0" title='{%trans "公开" %}' {% if pro.role == 0 %} checked {%endif%} lay-filter="role">
+                        <input type="radio" name="role" value="1" title='{%trans "私密" %}' {% if pro.role == 1 %} checked {%endif%} lay-filter="role">
+                        <input type="radio" name="role" value="2" title='{%trans "指定用户可见" %}' {% if pro.role == 2 %} checked {%endif%} lay-filter="role">
+                        <input type="radio" name="role" value="3" title='{%trans "访问码可见" %}' {% if pro.role == 3 %} checked {%endif%} lay-filter="role">
                     </div>
                 </div>
 
                 <div class="layui-form-item" style="{% if pro.role == 3 %}{% else %}display:none;{% endif %}" id="role-pwd">
                     <label class="layui-form-label">{%trans "访问码" %}</label>
                     <div class="layui-input-inline">
-                    <input type="text" name="viewcode"  placeholder={%trans "请输入访问码" %} autocomplete="off" class="layui-input" value="{{pro.role_value}}">
+                    <input type="text" name="viewcode"  placeholder='{%trans "请输入访问码" %}' autocomplete="off" class="layui-input" value="{{pro.role_value}}">
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "不少于4位数"%}</div>
                 </div>
@@ -64,7 +64,7 @@
                     <label class="layui-form-label">{%trans "允许用户" %}</label>
                     <div class="layui-input-block">
                         <div class="tagsinput-primary form-group">
-                            <input name="tagsinput" id="tagsinputval" class="tagsinput" data-role="tagsinput" value="{{pro.role_value}}" placeholder={%trans "请输入用户名，回车输入多个用户" %}>
+                            <input name="tagsinput" id="tagsinputval" class="tagsinput" data-role="tagsinput" value="{{pro.role_value}}" placeholder='{%trans "请输入用户名，回车输入多个用户" %}'>
                             <!--<button class="btn" onClick="getinput()">查询</button>-->
                         </div>
                     </div>
