--- a/template/app_admin/admin_register_code.html
+++ b/template/app_admin/admin_register_code.html
@@ -112,10 +112,10 @@
         createRegisterCode = function(){
             layer.open({
                 type:1,
-                title:{%trans '新增注册码' %},
+                title:"{%trans '新增注册码' %}",
                 area:'300px;',
                 id:'createRegCode',//配置ID
-                content:'<div style="margin:10px;"><input class="layui-input" id="regCodeCnt" type="number" value=1 placeholder={%trans "输入注册码最大使用次数"%}/></div>',
+                content:'<div style="margin:10px;"><input class="layui-input" id="regCodeCnt" type="number" value=1 placeholder="{%trans "输入注册码最大使用次数"%}"/></div>',
                 btn:['{%trans "确定"%}','{%trans "取消"%}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -143,7 +143,7 @@
         delRegisterCode = function(code_id){
             layer.open({
                 type:1,
-                title:{%trans "删除文档" %},
+                title:"{%trans '删除文档' %}",
                 area:'300px;',
                 id:'delRegCode',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此注册码！"%}</div>',
