--- a/template/app_admin/admin_setting.html
+++ b/template/app_admin/admin_setting.html
@@ -31,35 +31,35 @@
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "站点名称" %}</label>
                     <div class="layui-input-inline">
-                      <input name="site_name" placeholder={%trans "请输入站点标题" %} class="layui-input" value="{% if site_name != None %}{{site_name}}{% endif %}"></input>
+                      <input name="site_name" placeholder="{%trans '请输入站点标题' %}" class="layui-input" value="{% if site_name != None %}{{site_name}}{% endif %}"></input>
                     </div>
                   </div>
                   <!-- 站点子标题 -->
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "子标题" %}</label>
                     <div class="layui-input-block">
-                      <input name="site_sub_name" placeholder={%trans "请输入站点的子标题" %} class="layui-input" value="{% if site_sub_name != None %}{{site_sub_name}}{% endif %}"></input>
+                      <input name="site_sub_name" placeholder='{%trans "请输入站点的子标题" %}' class="layui-input" value="{% if site_sub_name != None %}{{site_sub_name}}{% endif %}"></input>
                     </div>
                   </div>
                   <!-- 站点关键词 -->
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "关键词" %}</label>
                     <div class="layui-input-block">
-                      <input name="site_keywords" placeholder={%trans "多个关键词请使用使用英文逗号,进行分隔" %} class="layui-input" value="{% if site_keywords != None %}{{site_keywords}}{% endif %}"></input>
+                      <input name="site_keywords" placeholder='{%trans "多个关键词请使用使用英文逗号,进行分隔" %}' class="layui-input" value="{% if site_keywords != None %}{{site_keywords}}{% endif %}"></input>
                     </div>
                   </div>
                   <!-- 站点描述 -->
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "站点描述" %}</label>
                     <div class="layui-input-block">
-                      <input name="site_desc" placeholder={%trans "请用简短的文字描述你的觅道文档站点" %} class="layui-input" value="{% if site_desc != None %}{{site_desc}}{% endif %}"></input>
+                      <input name="site_desc" placeholder='{%trans "请用简短的文字描述你的觅道文档站点" %}' class="layui-input" value="{% if site_desc != None %}{{site_desc}}{% endif %}"></input>
                     </div>
                   </div>
                   <!-- 备案号 -->
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "备案号" %}</label>
                     <div class="layui-input-inline">
-                      <input name="beian_code" placeholder={%trans "请输入网站的备案号" %} class="layui-input" value="{% if beian_code != None %}{{beian_code}}{% endif %}"></input>
+                      <input name="beian_code" placeholder='{%trans "请输入网站的备案号" %}' class="layui-input" value="{% if beian_code != None %}{{beian_code}}{% endif %}"></input>
                     </div>
                   </div>
                   <hr>
@@ -68,11 +68,11 @@
                     <label class="layui-form-label">{%trans "首页排序" %}</label>
                     <div class="layui-input-inline">
                       {% if index_project_sort == '-1' %}
-                      <input type="radio" name="index_project_sort"" value="1" title={%trans "升序" %} >
-                      <input type="radio" name="index_project_sort" value="-1" title={%trans "降序" %} checked>
+                      <input type="radio" name="index_project_sort"" value="1" title='{%trans "升序" %}' >
+                      <input type="radio" name="index_project_sort" value="-1" title='{%trans "降序" %}' checked>
                       {% else %}
-                      <input type="radio" name="index_project_sort"" value="1" title={%trans "升序" %} checked>
-                      <input type="radio" name="index_project_sort" value="-1" title={%trans "降序" %}>
+                      <input type="radio" name="index_project_sort"" value="1" title='{%trans "升序" %}' checked>
+                      <input type="radio" name="index_project_sort" value="-1" title='{%trans "降序" %}'>
                       {% endif %}
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "首页文集列表的排序方式" %}</div>
@@ -81,7 +81,7 @@
                   <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "禁止注册" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="close_register" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if close_register %}checked{% endif %}>
+                      <input type="checkbox" name="close_register" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if close_register %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启此选项将禁止新用户注册" %}</div>
                   </div>
@@ -89,7 +89,7 @@
                    <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "全站登录" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="require_login" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if require_login %}checked{% endif %}>
+                      <input type="checkbox" name="require_login" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if require_login %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启此选项，除注册、登录页面外的所有页面的访问都需要登录" %}</div>
                   </div>
@@ -97,7 +97,7 @@
                   <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "启用注册码" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="enable_register_code" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if enable_register_code %}checked{% endif %}>
+                      <input type="checkbox" name="enable_register_code" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if enable_register_code %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启此选项，新用户注册将需要填写注册码" %}</div>
                   </div>
@@ -105,7 +105,7 @@
                   <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "登录验证码" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="enable_login_check_code" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if enable_login_check_code %}checked{% endif %}>
+                      <input type="checkbox" name="enable_login_check_code" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if enable_login_check_code %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启此选项，登录将需要填写验证码" %}</div>
                   </div>
@@ -114,7 +114,7 @@
                    <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "文集下载" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="enable_project_report" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if enable_project_report %}checked{% endif %}>
+                      <input type="checkbox" name="enable_project_report" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if enable_project_report %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启此选项，文集允许导出为EPUB和DOCX等格式文件以供下载，文集拥有者可进行进一步控制特定文集是否开放导出" %}</div>
                   </div>
@@ -122,7 +122,7 @@
                   <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "启用邮箱" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="enable_email" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if enable_email %}checked{% endif %}>
+                      <input type="checkbox" name="enable_email" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if enable_email %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启此选项后还需进行邮箱信息配置" %}</div>
                   </div>
@@ -130,7 +130,7 @@
                   <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "图片缩略" %}</label>
                     <div class="layui-input-inline">
-                      <input type="checkbox" name="img_scale" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if img_scale %}checked{% endif %}>
+                      <input type="checkbox" name="img_scale" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if img_scale %}checked{% endif %}>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "开启后文档中的图片将显示为最大宽度350px的缩略图" %}</div>
                   </div>
@@ -139,27 +139,27 @@
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "统计代码" %}</label>
                     <div class="layui-input-block">
-                      <textarea name="static_code" placeholder={%trans "如果需要调用第三方的统计功能，请将第三方统计工具代码输入至此，可以包含<script>标签" %} class="layui-textarea">{{static_code}}</textarea>
+                      <textarea name="static_code" placeholder='{%trans "如果需要调用第三方的统计功能，请将第三方统计工具代码输入至此，可以包含<script>标签" %}' class="layui-textarea">{{static_code}}</textarea>
                     </div>
                   </div>
 
                    <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "广告位1" %}</label>
                     <div class="layui-input-block">
-                      <textarea name="ad_code" placeholder={%trans "如果需要在文档正文上方添加广告，请将广告相关代码输入至此，可以包含<script>标签" %} class="layui-textarea">{{ad_code}}</textarea>
+                      <textarea name="ad_code" placeholder='{%trans "如果需要在文档正文上方添加广告，请将广告相关代码输入至此，可以包含<script>标签" %}' class="layui-textarea">{{ad_code}}</textarea>
                     </div>
                   </div>
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "广告位2" %}</label>
                     <div class="layui-input-block">
-                      <textarea name="ad_code_2" placeholder={%trans "此广告位位于文档下方、分享按钮上方，可以包含<script>标签" %} class="layui-textarea">{{ad_code_2}}</textarea>
+                      <textarea name="ad_code_2" placeholder='{%trans "此广告位位于文档下方、分享按钮上方，可以包含<script>标签" %}' class="layui-textarea">{{ad_code_2}}</textarea>
                     </div>
                   </div>
 
                   <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">{%trans "广告位3"%}</label>
                     <div class="layui-input-block">
-                      <textarea name="ad_code_3" placeholder={%trans "此广告位位于文档左侧目录栏下方，可以包含<script>标签" %} class="layui-textarea">{{ad_code_3}}</textarea>
+                      <textarea name="ad_code_3" placeholder='{%trans "此广告位位于文档左侧目录栏下方，可以包含<script>标签" %}' class="layui-textarea">{{ad_code_3}}</textarea>
                     </div>
                   </div>
 
@@ -215,7 +215,7 @@
                     <div class="layui-form-item">
                     <label class="layui-form-label">{%trans "使用SSL" %}</label>
                     <div class="layui-input-block">
-                      <input type="checkbox" name="smtp_ssl" lay-skin="switch" lay-text={%trans "开启|关闭" %}  {% if email_ssl.value %}checked{% endif %}>
+                      <input type="checkbox" name="smtp_ssl" lay-skin="switch" lay-text='{%trans "开启|关闭" %}'  {% if email_ssl.value %}checked{% endif %}>
                     </div>
                   </div>
 
@@ -237,7 +237,7 @@
                     <label class="layui-form-label">ifrme{%trans "白名单" %}</label>
                     <div class="layui-input-inline">
                         <div class="tagsinput-primary form-group">
-                            <input name="iframe_whitelist" id="iframe_whitelist" class="tagsinput" data-role="tagsinput" value="{% if iframe_whitelist != '' %}{{iframe_whitelist}}{% endif %}" placeholder={%trans "请输入域名" %}>
+                            <input name="iframe_whitelist" id="iframe_whitelist" class="tagsinput" data-role="tagsinput" value="{% if iframe_whitelist != '' %}{{iframe_whitelist}}{% endif %}" placeholder='{%trans "请输入域名" %}'>
                         </div>
                     </div>
                     <div class="layui-form-mid layui-word-aux">{%trans "默认支持YouTube、优酷、QQ视频、Facebook、哔哩哔哩、TED网站，仅用于EditorMD编辑器模式" %}</div>
@@ -257,7 +257,7 @@
                   <label class="layui-form-label">{%trans "附件格式" %}</label>
                   <div class="layui-input-inline">
                       <div class="tagsinput-primary form-group">
-                          <input name="attachment_suffix" id="attachment_suffix" class="tagsinput" data-role="tagsinput" value="{% if attachment_suffix != '' %}{{attachment_suffix}}{% endif %}" placeholder={%trans "不带.号的格式后缀" %}>
+                          <input name="attachment_suffix" id="attachment_suffix" class="tagsinput" data-role="tagsinput" value="{% if attachment_suffix != '' %}{{attachment_suffix}}{% endif %}" placeholder='{%trans "不带.号的格式后缀" %}'>
                       </div>
                   </div>
                   <div class="layui-form-mid layui-word-aux">{%trans "默认支持.zip文件格式" %}</div>
