--- a/template/app_admin/admin_user.html
+++ b/template/app_admin/admin_user.html
@@ -14,7 +14,7 @@
         <div class="layui-row">
             <div class="layui-form-item">
                 <div class="layui-input-inline">
-                    <input type="text" name="username" id="username" required lay-verify="required" placeholder={%trans "输入用户名" %} autocomplete="off" class="layui-input">
+                    <input type="text" name="username" id="username" required lay-verify="required" placeholder='{%trans "输入用户名" %}' autocomplete="off" class="layui-input">
                 </div>
                 <button class="pear-btn pear-btn-sm" onclick="getUserInfo()"><i class="layui-icon layui-icon-search"></i>{%trans "搜索" %}</button>
                 <button class="pear-btn pear-btn-primary pear-btn-sm" onclick="createUser()" type="button"><i class="layui-icon layui-icon-addition"></i>{%trans "新增用户" %}</button>
@@ -90,14 +90,14 @@
             },
             page:true,
             cols: [[
-                {field:'username',title:{%trans '用户名' %},width:160},
-                {field:'first_name',title:{%trans '昵称' %},width:160},
-                {field:'email',title:{%trans '电子邮箱' %},width:160},
-                {field:'is_superuser',title:{%trans '用户角色' %},width:100,templet:'#userRole'},
-                {field:'date_joined',title:{%trans '注册时间'%},width:160,templet:'#registerTime'},
-                {field:'last_login',title:{%trans '最后登录时间' %},width:160,templet:'#lastLoginTime'},
-                {field:'is_active',title:{%trans '状态' %},width:60,templet:'#userStatus'},
-                {field:'oprate',title:{%trans '操作' %},width:180,templet:'#userOpera'},
+                {field:'username',title:"{%trans '用户名' %}",width:160},
+                {field:'first_name',title:"{%trans '昵称' %}",width:160},
+                {field:'email',title:"{%trans '电子邮箱' %}",width:160},
+                {field:'is_superuser',title:"{%trans '用户角色' %}",width:100,templet:'#userRole'},
+                {field:'date_joined',title:"{%trans '注册时间'%}",width:160,templet:'#registerTime'},
+                {field:'last_login',title:"{%trans '最后登录时间' %}",width:160,templet:'#lastLoginTime'},
+                {field:'is_active',title:"{%trans '状态' %}",width:60,templet:'#userStatus'},
+                {field:'oprate',title:"{%trans '操作' %}",width:180,templet:'#userOpera'},
             ]],
             skin: 'line',
         });
@@ -105,10 +105,10 @@
         createUser = function(){
             layer.open({
                 type:1,
-                title:{%trans "新建用户" %},
+                title:'{%trans "新建用户" %}',
                 area:'300px;',
                 id:'createUser',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="user" style="margin-bottom:10px;" placeholder={%trans "输入用户名，长度不少于5位" %} required  lay-verify="required"><input class="layui-input" type="email" id="email" style="margin-bottom:10px;" placeholder={% trans "输入电子邮箱" %} required  lay-verify="required"><input class="layui-input" type="password" id="password" placeholder={%trans "输入密码，长度不少于6位" %} required  lay-verify="required"></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="user" style="margin-bottom:10px;" placeholder="{%trans "输入用户名，长度不少于5位" %}" required  lay-verify="required"><input class="layui-input" type="email" id="email" style="margin-bottom:10px;" placeholder="{% trans "输入电子邮箱" %}" required  lay-verify="required"><input class="layui-input" type="password" id="password" placeholder="{%trans "输入密码，长度不少于6位" %}" required  lay-verify="required"></div>',
                 btn:['{%trans "确定" %}','{%trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -126,7 +126,7 @@
                         }else{
                             //创建失败，提示
                             // console.log(r)
-                            layer.msg("请检查输入信息是否正确")
+                            layer.msg("{% trans '请检查输入信息是否正确' %}")
 
                         }
                     })
@@ -136,10 +136,10 @@
         createSuperUser = function(){
             layer.open({
                 type:1,
-                title:{%trans "新增管理员" %},
+                title:'{%trans "新增管理员" %}',
                 area:'300px;',
                 id:'createSuperUser',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="user2" style="margin-bottom:10px;" placeholder={% trans "输入用户名，长度不少于5位" %} required  lay-verify="required"><input class="layui-input" type="email" id="email2" style="margin-bottom:10px;" placeholder={% trans "输入电子邮箱" %} required  lay-verify="required"><input class="layui-input" type="password" id="password2" placeholder={%trans "输入密码，长度不少于6位" %} required  lay-verify="required"></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="user2" style="margin-bottom:10px;" placeholder="{% trans "输入用户名，长度不少于5位" %}" required  lay-verify="required"><input class="layui-input" type="email" id="email2" style="margin-bottom:10px;" placeholder="{% trans "输入电子邮箱" %}" required  lay-verify="required"><input class="layui-input" type="password" id="password2" placeholder="{%trans "输入密码，长度不少于6位" %}" required  lay-verify="required"></div>',
                 btn:['{%trans "确定" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -168,10 +168,10 @@
         changePwd = function(uid,username){
             layer.open({
                 type:1,
-                title:{%trans "修改密码"%},
+                title:'{%trans "修改密码"%}',
                 area:'300px;',
                 id:'changePwd',
-                content:'<div style="padding:10px 0 0 20px;">{%trans "修改用户"%}[' + username + ']{%trans "的密码"%}：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder={%trans "输入新密码" %} required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder={%trans "再次确认新密码" %} required  lay-verify="required"></div>',
+                content:'<div style="padding:10px 0 0 20px;">{%trans "修改用户"%}[' + username + ']{%trans "的密码"%}：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder="{%trans "输入新密码" %}" required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder="{%trans "再次确认新密码" %}" required  lay-verify="required"></div>',
                 btn:['{%trans "确认修改"%}','{%trans "取消" %}'],
                 yes:function (index,layero) {
                     layer.load();
@@ -212,7 +212,7 @@
         delUser = function(uid,username){
             layer.open({
                 type:1,
-                title:{%trans "删除用户"%},
+                title:'{%trans "删除用户"%}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除用户"%}'+username+'{%trans "及其文集文档！协作文档将转移给文集所有者"%}</div>',
