--- a/template/app_admin/admin_user_profile.html
+++ b/template/app_admin/admin_user_profile.html
@@ -34,7 +34,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">{% trans "用户状态" %}</label>
                 <div class="layui-input-inline">
-                    <input type="checkbox" name="is_active" lay-skin="switch" lay-text={%trans "启用|停用" %}>
+                    <input type="checkbox" name="is_active" lay-skin="switch" lay-text='{%trans "启用|停用" %}'>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -102,11 +102,11 @@
                             "is_superuser":r.data.is_superuser?'true':'false',
                         })
                     }else{
-                        layer.msg("用户资料获取出错")
+                        layer.msg("{% trans '用户资料获取出错' %}")
                     }
                 },
                 error:function(){
-                    layer.msg("用户资料获取异常")
+                    layer.msg("{% trans '用户资料获取异常' %}")
                 }
             })
         };
@@ -115,10 +115,10 @@
         changePwd = function(uid,username){
             layer.open({
                 type:1,
-                title:{%trans "修改密码" %},
+                title:'{%trans "修改密码" %}',
                 area:'300px;',
                 id:'changePwd',
-                content:'<div style="padding:10px 0 0 20px;">{%trans "修改用户的密码" %}：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder={%trans "输入新密码" %} required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder={%trans "再次确认新密码" %} required  lay-verify="required"></div>',
+                content:'<div style="padding:10px 0 0 20px;">{%trans "修改用户的密码" %}：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder="{%trans "输入新密码" %}" required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder="{%trans "再次确认新密码" %}" required  lay-verify="required"></div>',
                 btn:['{%trans "确认修改" %}','{%trans "取消" %}'],
                 yes:function (index,layero) {
                     layer.load();
