--- a/template/app_doc/editor/modify_doc.html
+++ b/template/app_doc/editor/modify_doc.html
@@ -19,7 +19,7 @@
 
 {% block head_toolbar %}
     <ul class="layui-nav layui-form">
-        <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title={% trans "切换侧边栏" %}>
+        <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title='{% trans "切换侧边栏" %}'>
             <i class="fa fa-align-justify"></i>
         </a>
         <li class="layui-nav-item mrdoc-import-doc-item">
@@ -30,11 +30,11 @@
                 <dd><a href="javascript:void(0);" id="doc-history">{% trans "文档历史" %}</a></dd>
                 <dd><a href="javascript:void(0);" id="doc-tag-set">{% trans "文档标签" %}</a></dd>
                 <hr>
-                <dd><input type="checkbox" name="open-children" title={% trans "展开下级目录" %} lay-skin="primary" {%if doc.open_children %}checked{% endif %}></dd>
-                <dd><input type="checkbox" name="show-children" title={% trans "显示下级文档" %} lay-skin="primary" {%if doc.show_children %}checked{% endif %}></dd>
+                <dd><input type="checkbox" name="open-children" title='{% trans "展开下级目录" %}' lay-skin="primary" {%if doc.open_children %}checked{% endif %}></dd>
+                <dd><input type="checkbox" name="show-children" title='{% trans "显示下级文档" %}' lay-skin="primary" {%if doc.show_children %}checked{% endif %}></dd>
                 <hr>
-                <dd><a href="javascript:;" onclick="moveDoc()" title={% trans "复制或移动此文档到其他文集"%}>{% trans "复制/移动文档" %}</a></dd>
-                <dd><a href="javascript:;" onclick="delDoc()" title={% trans "删除此文档" %}>{% trans "删除文档" %}</a></dd>
+                <dd><a href="javascript:;" onclick="moveDoc()" title='{% trans "复制或移动此文档到其他文集"%}'>{% trans "复制/移动文档" %}</a></dd>
+                <dd><a href="javascript:;" onclick="delDoc()" title='{% trans "删除此文档" %}'>{% trans "删除文档" %}</a></dd>
             </dl>  
         </li>
 
@@ -78,11 +78,11 @@
             </dl>  
         </li>        
         {% if doc.status == 0 %}
-        <button class="layui-btn layui-btn-sm layui-btn-normal layui-btn-radius pull-right" style="margin-top:10px;" title={% trans "保存文档" %} id="modify_save_doc">{% trans "保存" %}</button>
-        <button class="layui-btn layui-btn-sm layui-btn-primary layui-btn-radius pull-right" style="margin-top:10px;" title={% trans "保存文档为发布状态" %} id="modify_doc_to_pub">{% trans "转为发布" %}</button>
+        <button class="layui-btn layui-btn-sm layui-btn-normal layui-btn-radius pull-right" style="margin-top:10px;" title='{% trans "保存文档" %}' id="modify_save_doc">{% trans "保存" %}</button>
+        <button class="layui-btn layui-btn-sm layui-btn-primary layui-btn-radius pull-right" style="margin-top:10px;" title='{% trans "保存文档为发布状态" %}' id="modify_doc_to_pub">{% trans "转为发布" %}</button>
         {% elif doc.status == 1 %}
-        <button class="layui-btn layui-btn-sm layui-btn-normal layui-btn-radius pull-right" style="margin-top:10px;" title={% trans "保存文档" %} id="modify_save_doc">{% trans "保存" %}</button>
-        <button class="layui-btn layui-btn-sm layui-btn-primary layui-btn-radius pull-right" style="margin-top:10px;" title={% trans "保存文档为草稿状态" %} id="modify_doc_to_draft">{% trans "转为草稿" %}</button>
+        <button class="layui-btn layui-btn-sm layui-btn-normal layui-btn-radius pull-right" style="margin-top:10px;" title='{% trans "保存文档" %}' id="modify_save_doc">{% trans "保存" %}</button>
+        <button class="layui-btn layui-btn-sm layui-btn-primary layui-btn-radius pull-right" style="margin-top:10px;" title='{% trans "保存文档为草稿状态" %}' id="modify_doc_to_draft">{% trans "转为草稿" %}</button>
         {% endif %}
 
     </ul>
@@ -114,7 +114,7 @@
                     <input type="text" id="parent-doc" hidden> 
                 </div>
                 <div class="layui-col-md12">
-                    <input type="number" class="layui-input" placeholder={% trans "输入文档排序值，默认99" %} id="sort" value="{{doc.sort}}">
+                    <input type="number" class="layui-input" placeholder='{% trans "输入文档排序值，默认99" %}' id="sort" value="{{doc.sort}}">
                 </div>
             </div>
             
@@ -133,7 +133,7 @@
             <!-- 标题 -->
             <div style="padding-bottom:0px;">
                 <div class="layui-input-block" style="margin-left:0px;">
-                    <input type="text" name="doc-name" id="doc-name" required lay-verify="required" placeholder={% trans "请输入文档标题" %} value="{{ doc.name }}" class="layui-input">
+                    <input type="text" name="doc-name" id="doc-name" required lay-verify="required" placeholder='{% trans "请输入文档标题" %}' value="{{ doc.name }}" class="layui-input">
                 </div>
             </div>
             <br/>
@@ -167,10 +167,10 @@
             //console.log(data.value)
             layer.open({
                     type:0,
-                    title:{% trans "切换编辑器" %},
+                    title:'{% trans "切换编辑器" %}',
                     area:'300px;',
                     id:'change_editor',//配置ID
-                    content: {% trans "页面将重载，未提交的修改将丢失！" %},
+                    content: '{% trans "页面将重载，未提交的修改将丢失！" %}',
                     btn:[' {% trans "确定切换" %}','{% trans "取消返回" %}'], //添加按钮
                     btnAlign:'c', //按钮居中
                     yes:function (index,layero) {
@@ -206,18 +206,18 @@
                                         var $me = $(this)
                                         if($me.data('id') == obj.data.id){
                                             // console.log('点击了')
-                                            layer.msg("你选择了上级文档："+obj.data.title)
+                                            layer.msg("{%trans '你选择了上级文档：' %}"+obj.data.title)
                                             $me.find('span.layui-tree-txt').first().addClass('selected-parent-doc')
                                         }else{
                                             $me.find('span.layui-tree-txt').first().removeClass('selected-parent-doc')
                                         }
                                     });
                                 }else{
-                                    layer.msg("不可选择自己作为上级")
+                                    layer.msg("{%trans '不可选择自己作为上级' %}")
                                 };
                                 
                             }else{
-                                layer.msg("第三级文档不能作为上级文档")
+                                layer.msg("{%trans '第三级文档不能作为上级文档' %}")
                             };
                             
                         }
@@ -232,7 +232,7 @@
                         }
                     });
                 }else{
-                    layer.msg("获取下级文档失败！")
+                    layer.msg("{%trans '获取下级文档失败！' %}")
                 }
             });
         });
@@ -281,20 +281,20 @@
                     //修改成功
                     window.localStorage.removeItem('mrdoc_doc_cache') // 清空文档缓存
                     if(is_save == undefined){
-                        layer.msg('保存成功',{time:1000},function(){
+                        layer.msg('{%trans "保存成功" %}',{time:1000},function(){
                             md_changed = false;
                             $('button.layui-btn').attr("disabled",false);
                             $('button.layui-btn').removeClass('layui-btn-disabled');
                         });
                     }
                     else if(status === 1){
-                        layer.msg('发布成功',function(){
+                        layer.msg('{%trans "发布成功" %}',function(){
                             md_changed = false;
                             location.reload()
                             // window.location.href = "{% url 'doc' pro_id=doc.top_doc doc_id=doc.id %}";
                         });
                     }else{
-                        layer.msg('保存成功',{time:1000},function(){
+                        layer.msg('{% trans "保存成功" %}',{time:1000},function(){
                             md_changed = false;
                             $('button.layui-btn').attr("disabled",false);
                             $('button.layui-btn').removeClass('layui-btn-disabled');
@@ -303,7 +303,7 @@
                     }
                 }else{
                     //修改失败
-                    layer.msg('保存失败');
+                    layer.msg('{%trans "保存失败" %}');
                     $('button.layui-btn').attr("disabled",false);
                     $('button.layui-btn').removeClass('layui-btn-disabled');
                 }
@@ -391,7 +391,7 @@
         $("#doc-history").click(function(){
             layer.open({
                 type: 1,
-                title: {%trans "查看当前文档的历史版本" %},
+                title: '{%trans "查看当前文档的历史版本" %}',
                 id:'history-div',
                 content: $('#history-list'),
                 area:['530px','300px'],
@@ -424,11 +424,11 @@
         delDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:{% trans "删除文档" %},
+                title:'{% trans "删除文档" %}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档！" %}</div>',
-                btn:['确定','取消'], //添加按钮
+                btn:['{%trans "确定" %}','{%trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     layer.load(1);
@@ -439,7 +439,7 @@
                         layer.closeAll('loading')
                         if(r.status){
                             //修改成功
-                            layer.msg("文档已删除，即将跳转至文集")
+                            layer.msg("{%trans '文档已删除，即将跳转至文集' %}")
                             // window.location.reload();
                             window.location.href = "{% url 'pro_index' doc.top_doc %}"
                             //layer.close(index)
@@ -456,7 +456,7 @@
         moveDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:{% trans "复制或移动此文档到指定文集" %},
+                title:'{% trans "复制或移动此文档到指定文集" %}',
                 id:'moveDoc',
                 area:'450px;',
                 content:$('#move-project'),
@@ -475,8 +475,8 @@
                                     onlyIconControl:true,
                                     data:r.data,
                                     text: {
-                                        defaultNodeName: {%trans "未命名" %} //节点默认名称
-                                        ,none: {% trans "文集暂无文档" %} //数据为空时的提示文本
+                                        defaultNodeName: '{%trans "未命名" %}' //节点默认名称
+                                        ,none: '{% trans "文集暂无文档" %}' //数据为空时的提示文本
                                         },
                                     click: function(obj){
                                         if(obj.data.level != 3){
@@ -492,13 +492,13 @@
                                                 }
                                             });
                                         }else{
-                                            layer.msg("第三级文档不能作为上级文档")
+                                            layer.msg("{%trans '第三级文档不能作为上级文档' %}")
                                         }
                                         
                                     }
                                 });
                             }else{
-                                layer.msg("获取下级文档失败！")
+                                layer.msg("{%trans '获取下级文档失败！' %}")
                             }
                         });
                     });
@@ -517,7 +517,7 @@
                 doc_id:'{{doc.id}}'
             };
             if(data.pro_id === ''){
-                layer.msg("必须选择一个文集")
+                layer.msg("{%trans '必须选择一个文集' %}")
                 return
             }
             console.log(data)
