--- a/template/app_doc/foot_base.html
+++ b/template/app_doc/foot_base.html
@@ -2,7 +2,7 @@
 <div class="layui-footer" style="border-top: 1px #e6e6e6 solid;text-align:center;margin-top:38px;width:100%;">
     <div style="margin-top:5px;padding-bottom: 5px;">
         © <a href="https://zmister.com/mrdoc/">MrDoc 2019-2021</a>&nbsp;|&nbsp;
-        <a href="https://zmister.com" target="_blank">州的先生</a>出品 |
+        <a href="https://zmister.com" target="_blank">{%trans "州的先生" %}</a>{%trans "出品 " %}|
         <a href="{% url 'sitemap' %}" target="_blank">{% trans "网站地图" %}</a>
     </div>
     {% if beian_code != None %}
