--- a/template/app_doc/manage/manage_collect.html
+++ b/template/app_doc/manage/manage_collect.html
@@ -17,9 +17,9 @@
             <div class="layui-form-item">
               <label class="layui-form-label">{% trans "收藏类型" %}</label>
               <div class="layui-input-block">
-                <input type="radio" name="status" title={%trans "全部" %} ({{all_cnt}}) value="-1" lay-skin="primary" checked lay-filter="collect_type">
-                <input type="radio" name="status" title={%trans "文集" %} ({{collect_project_cnt}}) value="2"  lay-skin="primary" lay-filter="collect_type">
-                <input type="radio" name="status" title={%trans "文档" %} ({{collect_doc_cnt}}) value="1" lay-skin="primary" lay-filter="collect_type">
+                <input type="radio" name="status" title='{%trans "全部" %}' ({{all_cnt}}) value="-1" lay-skin="primary" checked lay-filter="collect_type">
+                <input type="radio" name="status" title='{%trans "文集" %}' ({{collect_project_cnt}}) value="2"  lay-skin="primary" lay-filter="collect_type">
+                <input type="radio" name="status" title='{%trans "文档" %}' ({{collect_doc_cnt}}) value="1" lay-skin="primary" lay-filter="collect_type">
               </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
         delCollect = function(collect_id){
             layer.open({
                 type:1,
-                title:{%trans '删除收藏' %},
+                title:'{%trans "删除收藏" %}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此收藏！"%}</div>',
@@ -121,7 +121,7 @@
                         success: function(r) {
                             layer.closeAll();
                             if (r.status) {
-                                layer.msg("取消成功", {
+                                layer.msg("{%trans '取消成功' %}", {
                                     icon: 1,
                                     time: 1000
                                 }, function() {
@@ -143,7 +143,7 @@
         batchRemoveCollect = function(obj) {
             let data = table.checkStatus(obj.config.id).data;
             if (data.length === 0) {
-                layer.msg("未选中任何收藏", {
+                layer.msg("{%trans '未选中任何收藏' %}", {
                     icon: 3,
                     time: 1000
                 });
@@ -155,9 +155,9 @@
             }
             collect_id = collect_id.substr(0, collect_id.length - 1);
             // console.log(pro_id)
-            layer.confirm('确定要取消这些收藏？', {
+            layer.confirm("{%trans '确定要取消这些收藏？' %}", {
                 icon: 3,
-                title: {%trans '提示' %}
+                title: '{%trans "提示" %}'
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
@@ -169,7 +169,7 @@
                     success: function(r) {
                         layer.close(loading);
                         if (r.status) {
-                            layer.msg("取消成功", {
+                            layer.msg("{%trans '取消成功' %}", {
                                 icon: 1,
                                 time: 1000
                             }, function() {
