--- a/template/app_doc/manage/manage_doc_recycle.html
+++ b/template/app_doc/manage/manage_doc_recycle.html
@@ -90,7 +90,7 @@
         delDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:{%trans '删除文档'%},
+                title:'{%trans "删除文档"%}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将彻底删除此文档！"%}</div>',
@@ -121,7 +121,7 @@
         restoreDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:{%trans '还原文档' %},
+                title:'{%trans "还原文档" %}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "提示：文档将还原为草稿状态！"%}</div>',
@@ -152,7 +152,7 @@
         emptyDoc = function(){
             layer.open({
                 type:1,
-                title:{%trans '清空回收站'%},
+                title:'{%trans "清空回收站"%}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将彻底删除回收站所有文档！"%}</div>',
@@ -182,7 +182,7 @@
         restoreAll = function(){
             layer.open({
                 type:1,
-                title:{%trans '还原回收站'%},
+                title:'{%trans "还原回收站"%}',
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将还原回收站所有文档为草稿状态！"%}</div>',
