--- a/template/app_doc/manage/manage_doc_share.html
+++ b/template/app_doc/manage/manage_doc_share.html
@@ -44,7 +44,7 @@
     <!-- 分享状态 -->
     <script type="text/html" id="share-enable">
         {% verbatim %}
-        <input type="checkbox" name="share-enable" value="{{d.token}}" lay-skin="switch" lay-text={%trans "启用|禁用"%} lay-filter="share-enable" {{ d.share_status == true ? 'checked' : '' }}>
+        <input type="checkbox" name="share-enable" value="{{d.token}}" lay-skin="switch" lay-text='{%trans "启用|禁用"%}' lay-filter="share-enable" {{ d.share_status == true ? 'checked' : '' }}>
         {% endverbatim %}
     </script>
 
@@ -65,7 +65,7 @@
         delTemp = function(doctemp_id){
             layer.open({
                 type:1,
-                title:{%trans '删除文档'%},
+                title:"{%trans '删除文档'%}",
                 area:'300px;',
                 id:'delPro',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档模板！"%}</div>',
@@ -94,12 +94,12 @@
         let cols = [
                 [
                     {type: 'checkbox'},
-                    {title: {%trans '文档名称'%},field: 'doc_name',align: 'left'},
-                    {title: {%trans '分享类型'%},field: 'share_type',align: 'left',width: 100,templet:"#share-type"},
-                    {title: {%trans '分享码'%},field: 'share_value',align: 'left',width: 100},
-                    {title: {%trans '分享时间'%},field: 'create_time',align: 'left',width: 150,templet:"#share-create-time"},
-                    {title: {%trans '状态'%},field: 'share_status',align: 'left',width: 100,templet:"#share-enable"},
-                    {title: {%trans '操作'%},toolbar: '#share-doc-bar',align: 'left',width: 130}
+                    {title: '{%trans "文档名称"%}',field: 'doc_name',align: 'left'},
+                    {title: '{%trans "分享类型"%}',field: 'share_type',align: 'left',width: 100,templet:"#share-type"},
+                    {title: '{%trans "分享码"%}',field: 'share_value',align: 'left',width: 100},
+                    {title: '{%trans "分享时间"%}',field: 'create_time',align: 'left',width: 150,templet:"#share-create-time"},
+                    {title: '{%trans "状态"%}',field: 'share_status',align: 'left',width: 100,templet:"#share-enable"},
+                    {title: '{%trans "操作"%}',toolbar: '#share-doc-bar',align: 'left',width: 130}
                 ]
             ]
         // 渲染表格
@@ -129,9 +129,9 @@
             }
             $.post("{% url 'manage_doc_share' %}",data,function(r){
                 if(r.status){
-                    layer.msg("设置成功")
+                    layer.msg("{%trans '设置成功' %}")
                 }else{
-                    layer.msg("设置失败")
+                    layer.msg("{%trans '设置失败' %}")
                 }
             })
         })
@@ -144,9 +144,9 @@
             }
         });
         window.remove = function(obj) {
-            layer.confirm('确定要删除该分享？', {
+            layer.confirm('{%trans "确定要删除该分享？" %}', {
                 icon: 3,
-                title: {%trans '提示'%}
+                title: '{%trans "提示"%}'
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
@@ -158,7 +158,7 @@
                     success: function(r) {
                         layer.close(loading);
                         if (r.status) {
-                            layer.msg("删除成功", {
+                            layer.msg("{%trans '删除成功' %}", {
                                 icon: 1,
                                 time: 1000
                             }, function() {
@@ -183,7 +183,7 @@
         window.batchRemove = function(obj) {
             let data = table.checkStatus(obj.config.id).data;
             if (data.length === 0) {
-                layer.msg("未选中数据", {
+                layer.msg("{%trans '未选中数据' %}", {
                     icon: 3,
                     time: 1000
                 });
@@ -195,9 +195,9 @@
             }
             tokens = tokens.substr(0, tokens.length - 1);
             console.log(tokens)
-            layer.confirm('确定要删除这些分享？', {
+            layer.confirm('{%trans "确定要删除这些分享？" %}', {
                 icon: 3,
-                title: {%trans '提示'%}
+                title: '{%trans "提示"%}'
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
@@ -209,7 +209,7 @@
                     success: function(r) {
                         layer.close(loading);
                         if (r.status) {
-                            layer.msg("删除成功", {
+                            layer.msg("{%trans '删除成功' %}", {
                                 icon: 1,
                                 time: 1000
                             }, function() {
