--- a/template/app_doc/manage/manage_doc_tag.html
+++ b/template/app_doc/manage/manage_doc_tag.html
@@ -66,7 +66,7 @@
         delTag = function(group_id){
             layer.open({
                 type:1,
-                title:{%trans '删除分组'%},
+                title:'{%trans "删除分组"%}',
                 area:'300px;',
                 id:'delGroup',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：操作将删除此标签！"%}</div>',
@@ -96,7 +96,7 @@
         modifyTag = function(group_id){
             layer.open({
                 type:1,
-                title:{%trans '修改分组'%},
+                title:'{%trans "修改分组"%}',
                 area:'300px;',
                 id:'modifyGroup',//配置ID
                 content:'<div style="margin:10px;"><input class="layui-input" placeholder={%trans "输入标签的新名称"%} id="new-group-name"></input></div>',
