--- a/template/app_doc/manage/manage_doctemp.html
+++ b/template/app_doc/manage/manage_doctemp.html
@@ -15,7 +15,7 @@
         <form action="{% url 'manage_doctemp' %}" method="get">
         <div class="layui-form-item">
             <div class="layui-input-inline">
-                <input type="text" name="kw" id="kw"  placeholder={%trans "输入文档模板内容"%} autocomplete="off" class="layui-input">
+                <input type="text" name="kw" id="kw"  placeholder='{%trans "输入文档模板内容"%}' autocomplete="off" class="layui-input">
             </div>
             <button class="pear-btn pear-btn-sm" type="submit"><i class="layui-icon layui-icon-search"></i>{% trans "搜索" %}</button>
             <a href="{% url 'create_doctemp' %}" target="_blank" class="pear-btn pear-btn-primary pear-btn-sm">
@@ -93,7 +93,7 @@
         delTemp = function(doctemp_id){
         layer.open({
             type:1,
-            title:{%trans '删除文档'%},
+            title:"{%trans '删除文档'%}",
             area:'300px;',
             id:'delPro',//配置ID
             content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档模板！"%}</div>',
