--- a/template/app_doc/manage/manage_image.html
+++ b/template/app_doc/manage/manage_image.html
@@ -46,8 +46,8 @@
                     <img class="image-list-i" src="{{img.file_path}}"  title="{{img.file_name}}">
                     <div class="opera-img-btn">
                         <input type="checkbox" class="batch-image-checkbox" name="batch-image" value="{{img.id}}"></input>
-                        <a href="javascript:void(0);" class="move-img" title={%trans "移动分组" %} data-src="{{img.file_path}}" data-id="{{img.id}}"><i class="layui-icon layui-icon-transfer"></i></a>
-                        <a href="javascript:void(0);" class="del-img" title={%trans "删除图片" %} data-src="{{img.file_path}}" data-id="{{img.id}}"><i class="layui-icon layui-icon-delete"></i></a>
+                        <a href="javascript:void(0);" class="move-img" title='{%trans "移动分组" %}' data-src="{{img.file_path}}" data-id="{{img.id}}"><i class="layui-icon layui-icon-transfer"></i></a>
+                        <a href="javascript:void(0);" class="del-img" title='{%trans "删除图片" %}' data-src="{{img.file_path}}" data-id="{{img.id}}"><i class="layui-icon layui-icon-delete"></i></a>
                     </div>
                 </li>
 
@@ -99,7 +99,7 @@
             var img_src = $(this).data("src");
             layer.open({
                 type:1,
-                title:{%trans '删除图片'%},
+                title:'{%trans "删除图片"%}',
                 area:'300px;',
                 id:'delImg',//配置ID
                 content:'<div style="margin:10px;"><img src="'+ img_src +'" style="width:50px;height:50px;margin:10px;"/><span>{%trans "删除此图片后，文档中添加的该图片将不再显示！" %}</span></div>',
@@ -136,7 +136,7 @@
             var img_src = $(this).data("src");
             layer.open({
                 type:1,
-                title:{%trans "移动图片分组" %},
+                title:'{%trans "移动图片分组" %}',
                 area:['300px','300px'],
                 id:'moveImg',//配置ID
                 content:$("#move-group-layer"),
@@ -154,7 +154,7 @@
                         layer.closeAll('loading')
                         if(r.status){
                             //移动成功
-                            layer.msg('移动成功', {
+                            layer.msg('{%trans "移动成功" %}', {
                                     icon: 1,
                                     time: 1000
                                 }, function() {
@@ -187,7 +187,7 @@
         createImgGroup = function(){
             layer.open({
                 type:1,
-                title:{% trans "新建图片分组" %},
+                title:'{% trans "新建图片分组" %}',
                 area:'300px;',
                 id:'createImgGroup',//配置ID
                 content:'<div style="margin:10px;"><input type="text" id="img_group_name" class="layui-input" /></div>',
@@ -233,7 +233,7 @@
             },
             error:function(){
                 layer.closeAll('loading'); //关闭loading
-                layer.msg("系统异常，请稍后再试！")
+                layer.msg("{%trans '系统异常，请稍后再试！' %}")
             },
             accept: 'images', //允许上传的文件类型
             acceptMime:'image/*',
@@ -242,12 +242,12 @@
         });
         // 全选图片
         $("#select-all-img").click(function(){
-            if($(this).text() === {%trans '全选' %}){
+            if($(this).text() === "{%trans '全选' %}"){
                 $("input[name='batch-image']").prop("checked","true");
-                $(this).text({%trans "取消全选" %});
+                $(this).text('{%trans "取消全选" %}');
             }else{
                 $("input[name='batch-image']").removeAttr("checked");
-                $(this).text({%trans "全选" %});
+                $(this).text('{%trans "全选" %}');
             }
             
         });
@@ -259,7 +259,7 @@
                 img_list.push($(this).val())
             })
             if(img_list.length === 0){
-                layer.msg("未选中任何图片", {
+                layer.msg("{%trans '未选中任何图片' %}", {
                     icon: 3,
                     time: 1000
                 });
@@ -272,11 +272,11 @@
             imgs_id = imgs_id.substr(0, imgs_id.length - 1);
             layer.open({
                 type:1,
-                title:{% trans '批量删除图片' %},
+                title:'{% trans "批量删除图片" %}',
                 area:'300px;',
                 id:'batchDelImg',//配置ID
                 content:'<div style="margin-left:10px;"{%trans "你正在批量删除图片！" %}<br><br>{% trans "警告！此操作将"%} <span style="font-weight:700;color:red;">{% trans "删除所选图片，文档中所引用的图片将不再显示"%}</span>{%trans "并且" %}<span style="font-weight:700;color:red;">{%trans "不可恢复！"%}</span><br><br>{%trans "请输入" %}“DELETE”{%trans "以再次确认删除。"%}<br><input class="layui-input" style="width:95%;" id="confirm_batch_delete_image" placeholder="DELETE"></div>',
-                btn:[{%trans '确定删除' %},{%trans '取消' %}], //添加按钮
+                btn:["{%trans '确定删除' %}","{%trans '取消' %}"], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     var confirm_delete = $("#confirm_batch_delete_image").val()
@@ -291,7 +291,7 @@
                             layer.closeAll('loading')
                             if(r.status){
                                 //删除成功
-                                layer.msg('批量删除成功', {
+                                layer.msg('{%trans "批量删除成功" %}', {
                                     icon: 1,
                                     time: 1000
                                 }, function() {
@@ -304,7 +304,7 @@
                         })
 
                     }else{
-                        layer.msg("输入错误！")
+                        layer.msg("{%trans '输入错误！' %}")
                     }
                 },
 
@@ -318,7 +318,7 @@
                 img_list.push($(this).val())
             })
             if(img_list.length === 0){
-                layer.msg("未选中任何图片", {
+                layer.msg("{%trans '未选中任何图片' %}", {
                     icon: 3,
                     time: 1000
                 });
@@ -331,7 +331,7 @@
             imgs_id = imgs_id.substr(0, imgs_id.length - 1);
             layer.open({
                 type:1,
-                title:{%trans '批量移动图片' %},
+                title:'{%trans "批量移动图片" %}',
                 area:['300px','300px'],
                 id:'moveImg',//配置ID
                 content:$("#move-group-layer"),
@@ -350,7 +350,7 @@
                         layer.closeAll('loading')
                         if(r.status){
                             //移动成功
-                            layer.msg('批量移动成功', {
+                            layer.msg('{%trans "批量移动成功" %}', {
                                     icon: 1,
                                     time: 1000
                                 }, function() {
