--- a/template/app_doc/manage/manage_image_group.html
+++ b/template/app_doc/manage/manage_image_group.html
@@ -65,7 +65,7 @@
         delGroup = function(group_id){
             layer.open({
                 type:1,
-                title:{%trans '删除分组'%},
+                title:'{%trans "删除分组"%}',
                 area:'300px;',
                 id:'delGroup',//配置ID
                 content:'<div style="margin-left:10px;">{%trans "警告：操作将删除此图片分组，分组下所属图片将移动到【未分组】！"%}</div>',
@@ -95,10 +95,10 @@
         modifyGroup = function(group_id){
             layer.open({
                 type:1,
-                title:{%trans '修改分组'%},
+                title:'{%trans "修改分组"%}',
                 area:'300px;',
                 id:'modifyGroup',//配置ID
-                content:'<div style="margin:10px;"><input class="layui-input" placeholder={%trans "输入图片分组的新名称"%} id="new-group-name"></input></div>',
+                content:'<div style="margin:10px;"><input class="layui-input" placeholder="{%trans "输入图片分组的新名称" %}" id="new-group-name"></input></div>',
                 btn:['{%trans "确定"%}','{%trans "取消"%}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
