--- a/template/app_doc/manage/manage_overview.html
+++ b/template/app_doc/manage/manage_overview.html
@@ -107,7 +107,7 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">{% trans "标题" %}</label>
                             <div class="layui-input-block">
-                            <input type="text" id="doc_name" name="doc_name" required  lay-verify="required" placeholder={%trans "请输入文档标题" %} autocomplete="off" class="layui-input">
+                            <input type="text" id="doc_name" name="doc_name" required  lay-verify="required" placeholder='{%trans "请输入文档标题" %}' autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
@@ -132,7 +132,7 @@
                         <div class="layui-form-item layui-form-text">
                             <label class="layui-form-label">{% trans "文本域" %}</label>
                             <div class="layui-input-block">
-                            <textarea name="pre_content" id="pre_content" placeholder={%trans "在想些什么呢？" %} class="layui-textarea"></textarea>
+                            <textarea name="pre_content" id="pre_content" placeholder='{%trans "在想些什么呢？" %}' class="layui-textarea"></textarea>
                             </div>
                         </div>
                         <div class="layui-form-item">
