--- a/template/app_doc/project.html
+++ b/template/app_doc/project.html
@@ -113,7 +113,7 @@
         downloadFile = function(download_link){
             layer.open({
                 type:1,
-                title:"下载导出文档",
+                title:"{%trans '下载导出文档' %}",
                 area:"300px",
                 id:"downloadMd",
                 content:'<p style="text-align:center;color:red;">{%trans "请尽快下载，避免失效！"%}</p><br><a class="layui-btn layui-btn-normal layui-btn-fluid download-md-link" href="'+ download_link + '" download="" >{%trans "点击下载文件" %}</a>',
@@ -135,13 +135,13 @@
 <div class="layui-row layui-col-space20" style="padding-left: 20px;">
     <span >
         <i class="layui-icon layui-icon-user"></i>
-        <span tooltip={%trans "文集创建者" %}>{% if project.create_user.first_name != '' %} {{project.create_user.first_name}} {% else %} {{project.create_user.username}}{% endif %}</span>
+        <span tooltip='{%trans "文集创建者" %}'>{% if project.create_user.first_name != '' %} {{project.create_user.first_name}} {% else %} {{project.create_user.username}}{% endif %}</span>
         {% for colla in colla_user_list %}
-        ,<span tooltip={%trans "文集成员" %}>{% if colla.user.first_name != '' %} {{colla.user.first_name}} {% else %} {{colla.user.username}}{% endif %}</span>
+        ,<span tooltip='{%trans "文集成员" %}'>{% if colla.user.first_name != '' %} {{colla.user.first_name}} {% else %} {{colla.user.username}}{% endif %}</span>
         {% endfor %}
     </span>
 
-    <button id="share" class="doc-bottom-btn" tooltip={%trans "分享本文档" %} style="padding-left: 20px;">
+    <button id="share" class="doc-bottom-btn" tooltip='{%trans "分享本文档" %}' style="padding-left: 20px;">
         <i class="fa fa-share-alt" ></i> {% trans "分享" %}
     </button>
 </div>
@@ -193,7 +193,7 @@
                 });
                 $("#doc-tree").append(toc_str);
             }else{
-                layer.msg("获取文集文档大纲失败！")
+                layer.msg("{% trans '获取文集文档大纲失败！' %}")
             }
             layer.closeAll('loading')
         });
