--- a/template/app_doc/search.html
+++ b/template/app_doc/search.html
@@ -34,7 +34,7 @@
             <div class="shlogo"></div>
             <div class="sou">
                 <form action="{% url 'doc_search' %}" method="get" target="_self">
-                    <input class="wd" type="text" placeholder={%trans "请输入搜索内容" %} name="q" x-webkit-speech>
+                    <input class="wd" type="text" placeholder='{%trans "请输入搜索内容" %}' name="q" x-webkit-speech>
                     <!-- <input name="type" value="doc" hidden> -->
                     <input name="d_range" value="all" hidden>
                     <button type="submit" style="background-image: url(/static/search/search_btn.svg);"></button>
