--- a/template/forget_pwd.html
+++ b/template/forget_pwd.html
@@ -45,23 +45,23 @@
                 <span style='color:red;margin-bottom: 10px;'>{{ errormsg }}</span>
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                      <input type="text" name="email" id="email" required  lay-verify="required" placeholder={%trans "请输入注册邮箱"%}  class="layui-input">
+                      <input type="text" name="email" id="email" required  lay-verify="required" placeholder='{%trans "请输入注册邮箱"%}'  class="layui-input">
                     </div>
-                    <button class="layui-btn layui-btn-normal" type="button" id="send_email_vcode" onclick="getCode(this)">{% trans "发送验证码" %}</button>
+                    <button class="layui-btn layui-btn-normal" type="button" id="send_email_vcode" onclick="getCode(this)">"{% trans '发送验证码' %}"</button>
                 </div>
                 <div class="layui-form-item">
-                  <input type="text" name="vcode" required  lay-verify="required" placeholder={%trans "请输入验证码" %} autocomplete="off" class="layui-input">
+                  <input type="text" name="vcode" required  lay-verify="required" placeholder='{%trans "请输入验证码" %}' autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                  <input type="password" name="password" required  lay-verify="required" placeholder={% trans "请输入新密码" %} autocomplete="off" class="layui-input">
+                  <input type="password" name="password" required  lay-verify="required" placeholder='{% trans "请输入新密码" %}' autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                  <input type="password" name="confirm_password" required  lay-verify="required" placeholder={%trans "请确认新密码" %} autocomplete="off" class="layui-input">
+                  <input type="password" name="confirm_password" required  lay-verify="required" placeholder='{%trans "请确认新密码" %}' autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid layui-btn-radius  layui-btn-normal" lay-submit type="submit">{% trans "修改密码" %}</button>
+                    <button class="layui-btn layui-btn-fluid layui-btn-radius  layui-btn-normal" lay-submit type="submit">'{% trans "修改密码" %}'</button>
                 </div>
-                <a href="{% url 'login' %}" class="register-link">{% trans "返回登录" %}</a>&nbsp;
+                <a href="{% url 'login' %}" class="register-link">'{% trans "返回登录" %}'</a>&nbsp;
             </form>
         </div>
     </div>
@@ -78,16 +78,16 @@
     function getCode(e) {
         email = document.getElementById("email");
         if(email.value.length == 0){
-           //layer.msg("请输入电子邮箱");
-           layer.msg("Please enter an email")
+           layer.msg("{%trans '请输入电子邮箱' %}");
+           //layer.msg("Please enter an email")
         }else{
             if(!(/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/.test(email.value))){
-                layer.msg("电子邮箱有误，请重填")
+                layer.msg("{%trans '电子邮箱有误，请重填' %}")
             }else{
                 //调用获取验证码的接口
                 $.post("{% url 'send_email_vcode' %}",{'email':email.value},function(r){
                     if(r.status){
-                        layer.msg("验证码发送成功，请查收！");
+                        layer.msg("{%trans '验证码发送成功，请查收！'%}");
                     }else{
                         layer.msg(r.data)
                     }
@@ -109,7 +109,7 @@
             //e.setAttribute("onclick","getcode(this)");
 
             btn.attr("disabled", false);
-			btn.html({%trans "获取验证码" %});
+			btn.html('{%trans "获取验证码" %}');
 			btn.removeClass("disabled");
 			btn.removeClass("layui-btn-disabled")
             time = 60;
@@ -121,7 +121,7 @@
             btn.addClass("disabled");
             btn.addClass("layui-btn-disabled")
 			btn.attr("disabled", true);
-			btn.html({% trans "重新发送(" %} + time + ")");
+			btn.html('{% trans "重新发送(" %}' + time + ")");
 
             //document.getElementById("getcode").innerHTML="重新发送"+time;
             time--;
